--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.15",
+    "axios": "^1.9.0",
     "i18next": "^25.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
